# MSE-6-R052D

./: .gitignore  .gitmodules  README.md  ps4.yml  steam_deck.yaml  test_camera.py
ares_ws/: aruco_goal_node.py
aruco_ws/src/detect_tag/detect_tag/: aruco_detector.py  tag_detector.py
aruco_ws/src/tag_interface/: CMakeLists.txt
calib/180cam/: ost.txt  ost.yaml
calib/logitech_webcam/: ost.txt  ost.yaml
micro-ros-demo/: README.md  platformio.ini
micro-ros-demo/src/components/: imu.hpp
micro-ros-demo/src/config/: config.hpp
micro-ros-demo/src/handlers/: rc_controller.hpp
micro-ros-demo/src/support/: helper.hpp  identity.hpp
ros2_ws/src/aruco_goal/: package.xml  setup.cfg  setup.py
ros2_ws/src/aruco_goal/aruco_goal/: aruco_goal_node.py
rviz/: aruco_demo.rviz
src/: CMakeLists.txt
uros_ws/src/ros2_servo/: CMakeLists.txt  package.xml
